<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/HomeLayoutStyle"
    android:orientation="vertical">

    <TextView
        style="@style/LayoutTitleStyle"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:text="@string/bixin_address_book" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_weight="1">

        <com.jcodecraeer.xrecyclerview.XRecyclerView
            android:id="@+id/rcv_address_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_device_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/please_connect_device"
            android:textColor="#fff"
            android:textSize="26sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/color_transparent_w_25"
            android:padding="10dp"
            android:text="@string/click_download_phone_book"
            android:textColor="#fff"
            android:textSize="26sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>