<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/HomeLayoutStyle">

    <TextView
        android:id="@+id/tv_music_title"
        style="@style/LayoutTitleStyle"
        android:layout_centerHorizontal="true"
        android:text="@string/bx_bt_music" />

    <TextView
        android:id="@+id/tv_music_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_music_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_paddingHorizontal"
        android:text="@string/song_title"
        android:textColor="#FFFFFF"
        android:textSize="29sp" />

    <TextView
        android:id="@+id/tv_music_singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_music_artist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/singer_title"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_music_lyric_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_music_singer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_paddingHorizontal"
        android:text="@string/bt_music_lyric"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_music_lyric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_music_lyric_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="26sp" />


    <LinearLayout
        android:id="@+id/ll_function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/music_toolbar_margin_bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_previous"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:src="@drawable/selector_music_player_state" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_media_next" />
    </LinearLayout>

</RelativeLayout>