<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijing">

    <LinearLayout
        android:id="@+id/ll_bt_phone"
        style="@style/HomeConstraintLayoutItemStyle"
        android:background="@drawable/selector_left_btn_bg"
        app:layout_constraintBottom_toTopOf="@id/ll_bt_dial"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/viewpager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/tv_normal"
            style="@style/HomeButtonTextStyle"
            android:text="@string/bt_phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bt_dial"
        style="@style/HomeConstraintLayoutItemStyle"
        android:background="@drawable/selector_left_btn_bg"
        app:layout_constraintBottom_toTopOf="@id/ll_bt_music"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/ll_bt_phone"
        app:layout_constraintTop_toBottomOf="@id/ll_bt_phone"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/tv_call_phone"
            style="@style/HomeButtonTextStyle"
            android:text="@string/bt_call_phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bt_music"
        style="@style/HomeConstraintLayoutItemStyle"
        android:background="@drawable/selector_left_btn_bg"
        app:layout_constraintBottom_toTopOf="@id/ll_bt_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/ll_bt_phone"
        app:layout_constraintTop_toBottomOf="@id/ll_bt_dial"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/tv_lock"
            style="@style/HomeButtonTextStyle"
            android:text="@string/bt_music" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bt_settings"
        style="@style/HomeConstraintLayoutItemStyle"
        android:background="@drawable/selector_left_btn_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/ll_bt_phone"
        app:layout_constraintTop_toBottomOf="@id/ll_bt_music"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/tv_picture"
            style="@style/HomeButtonTextStyle"
            android:text="@string/bt_settings" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ll_bt_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
